# duckdb-metastores

./: .gitignore  CMakeLists.txt  METASTORE_EXTENSION_PLAN.md  Makefile  README.md  extension_config.cmake  vcpkg.json
.github/workflows/: ExtensionTemplate.yml  LocalTesting.yml  MainDistributionPipeline.yml  metastore-ci.yml
.sisyphus/: boulder.json
.sisyphus/notepads/metastore-extension-execution-plan/: decisions.md  learnings.md
.sisyphus/plans/: metastore-extension-execution-plan.md
scripts/: create-hms-tables.sh  generate_hms_tests.sh  run_hms_integration.sh  run_tests_docker.sh  setup-metastore-dev.sh
src/: CMakeLists.txt  metastore_extension.cpp  metastore_functions.cpp  metastore_runtime.cpp
src/auth/: CMakeLists.txt  metastore_secret_bridge.cpp  metastore_secret_bridge.hpp
src/functions/: CMakeLists.txt  metastore_read.cpp
src/include/: metastore_connector.hpp  metastore_errors.hpp  metastore_extension.hpp  metastore_ffi.h  metastore_functions.hpp  metastore_runtime.hpp  metastore_types.hpp
src/include/auth/: metastore_secret_bridge.hpp
src/include/main/: metastore_connector.hpp  metastore_errors.hpp  metastore_ffi.h  metastore_runtime.hpp  metastore_types.hpp
src/include/planner/: metastore_planner.hpp
src/include/providers/hms/: hms_config.hpp  hms_connector.hpp  hms_mapper.hpp
src/planner/: CMakeLists.txt  metastore_planner.cpp  metastore_planner.hpp
src/providers/: CMakeLists.txt  bridge_ffi.cpp
src/providers/hms/: CMakeLists.txt  hms_config.hpp  hms_connector.cpp  hms_connector.hpp  hms_mapper.cpp  hms_mapper.hpp  hms_retry.hpp
test/: README.md
test/integration/: create-hms-tables.sh
test/integration/hms/: README.md  create-hms-tables.sh  docker-compose.yml  hms_integration_harness.cpp  run_hms_tests.sh
test/sql/: metastore_scan.test
test/sql/metastore/: test_metastore_read_bind.test
test/sql/metastore/generic/: auth_errors.test  extension_load.test  list_functions_validation.test  metastore_scan.test  scan_validation.test  test_metastore_read.test  (+1 more)
(+10 files in other folders)
